--- a/config.env
+++ b/config.env
@@ -15,3 +15,6 @@ RATE_LIMIT_MAX_REQUESTS=100
 CORS_ORIGIN=http://localhost:4200
 CORS_CREDENTIALS=true
 
+# JWT Configuration
+JWT_SECRET=femimed-super-secret-key-2024
+
