login y nuevo paciente

--- a/config.env
+++ b/config.env
@@ -18,3 +18,9 @@ CORS_CREDENTIALS=true
 # JWT Configuration
 JWT_SECRET=femimed-super-secret-key-2024
 
+# Email Configuration
+EMAIL_USER=codes.labs.rc@gmail.com
+EMAIL_PASSWORD=erkt jazp avno zcui
+EMAIL_SERVICE=gmail
+EMAIL_FROM=FemiMed <codes.labs.rc@gmail.com>
+
