--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   "license": "MIT",
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/multer": "^2.0.0",
+    "@types/nodemailer": "^7.0.2",
     "@types/uuid": "^11.0.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -36,6 +39,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.7",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
