multi-clinicas y informe medico

--- a/config.env
+++ b/config.env
@@ -24,3 +24,14 @@ EMAIL_PASSWORD=erkt jazp avno zcui
 EMAIL_SERVICE=gmail
 EMAIL_FROM=FemiMed <codes.labs.rc@gmail.com>
 
+# Clínica Configuration
+CLINICA_ALIAS=femimed
+CLINICA_NOMBRE=FemiMed - Centro Médico Integral
+CLINICA_DESCRIPCION=Centro médico especializado en atención integral de la mujer y medicina general
+
+# Frontend Configuration
+FRONTEND_URL=http://localhost:4200
+
+# Logo Configuration
+LOGO_PATH=../../frontend/femimed-frontend/src/assets/logos/femimed/logo.svg
+
