--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.7",
+    "puppeteer": "^24.25.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
