--- a/config.env
+++ b/config.env
@@ -17,6 +17,21 @@ CORS_CREDENTIALS=true
 
 # JWT Configuration
 JWT_SECRET=femimed-super-secret-key-2024
+JWT_EXPIRES_IN=24h
+JWT_REFRESH_EXPIRES_IN=7d
+
+# Security Configuration
+ENCRYPTION_KEY=femimed-encryption-key-2024
+API_KEY=femimed-api-key-2024
+SALT_ROUNDS=12
+
+# Rate Limiting Configuration
+RATE_LIMIT_AUTH_MAX=100
+RATE_LIMIT_AUTH_WINDOW=900000
+RATE_LIMIT_INFORME_MAX=3
+RATE_LIMIT_INFORME_WINDOW=60000
+RATE_LIMIT_EMAIL_MAX=10
+RATE_LIMIT_EMAIL_WINDOW=300000
 
 # Email Configuration
 EMAIL_USER=codes.labs.rc@gmail.com
