--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "helmet": "^7.2.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.6.0",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.7",
