--- a/config.dev.env
+++ b/config.dev.env
@@ -1,6 +1,6 @@
 # Server Configuration
 PORT=3000
-NODE_ENV=production
+NODE_ENV=development
 
 # Supabase Configuration
 SUPABASE_URL=https://snxiprwaaxaobjppqnxw.supabase.co
@@ -11,18 +11,18 @@ API_VERSION=v1
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
-# CORS Configuration
-CORS_ORIGIN=https://femimed.codes-labs.com
+# CORS Configuration (Desarrollo - localhost)
+CORS_ORIGIN=http://localhost:4200
 CORS_CREDENTIALS=true
 
 # JWT Configuration
-JWT_SECRET=femimed-super-secret-key-2024
+JWT_SECRET=femimed-super-secret-key-2024-dev
 JWT_EXPIRES_IN=24h
 JWT_REFRESH_EXPIRES_IN=7d
 
 # Security Configuration
-ENCRYPTION_KEY=femimed-encryption-key-2024
-API_KEY=femimed-api-key-2024
+ENCRYPTION_KEY=femimed-encryption-key-2024-dev
+API_KEY=femimed-api-key-2024-dev
 SALT_ROUNDS=12
 
 # Rate Limiting Configuration
@@ -44,9 +44,9 @@ CLINICA_ALIAS=femimed
 CLINICA_NOMBRE=FemiMed - Centro Médico Integral
 CLINICA_DESCRIPCION=Centro médico especializado en atención integral de la mujer y medicina general
 
-# Frontend Configuration
-FRONTEND_URL=https://femimed.codes-labs.com
+# Frontend Configuration (Desarrollo - localhost)
+FRONTEND_URL=http://localhost:4200
 
-# Logo Configuration
-LOGO_PATH=./assets/logos/femimed/logo.svg
+# Logo Configuration (Desarrollo - ruta relativa desde backend)
+LOGO_PATH=../../frontend/femimed-frontend/src/assets/logos/femimed/logo.svg
 
