--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "tsx watch src/server.ts",
+    "prebuild": "node scripts/generate-db-config.js",
     "build": "tsc && npm run copy:assets",
+    "build:postgres": "cross-env USE_POSTGRES=true npm run build",
+    "build:supabase": "cross-env USE_POSTGRES=false npm run build",
     "build:watch": "tsc --watch",
     "copy:assets": "node scripts/copy-assets.js",
     "test": "jest",
+    "test:postgres": "tsx scripts/test-postgres-connection.ts",
+    "test:postgres:simple": "node scripts/test-postgres-simple.js",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix"
   },
@@ -27,6 +32,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.2",
+    "@types/pg": "^8.15.6",
     "@types/uuid": "^11.0.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -44,6 +50,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.7",
+    "pg": "^8.16.3",
     "puppeteer": "^24.25.0",
     "uuid": "^13.0.0"
   },
@@ -59,6 +66,7 @@
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
+    "cross-env": "^10.1.0",
     "eslint": "^8.54.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
