--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "femimed-backend",
+  "name": "demomed-backend",
   "version": "1.0.0",
   "description": "Modern Node.js Express backend with PostgreSQL",
   "main": "dist/server.js",
@@ -23,7 +23,7 @@
     "api",
     "typescript"
   ],
-  "author": "FemiMed",
+  "author": "DemoMed",
   "license": "MIT",
   "dependencies": {
     "@types/bcrypt": "^6.0.0",
